index.html update

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
       transition: all 0.75s ease-in-out;
       font-weight: 200;
       font-style: italic;
+      margin-bottom: 0.32em;
     }
 
     article:hover h2 {
@@ -97,8 +98,8 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
       position: relative;
       top: -5px;
       left: -7px;
-      opacity: 0.65;
-      color: #09528A;
+      opacity: 0.85;
+      color: #000000;
     }
 
     p {
@@ -379,18 +380,15 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
 </head>
 
 <body>
-  <!-- div class="to-zero-to-hero" id="z2hjs" style="width:750px;margin: 0 auto;margin-top:30px;margin-bottom:10px;">
+  <div class="to-zero-to-hero" id="z2hjs" style="width:750px;margin: 0 auto;margin-top:30px;margin-bottom:10px;">
     <p style="line-height:2.4em;text-align:center;width: 750px;margin: 0 auto;margin-bottom:10px;margin-top:10px;">
-      <strong>Who else wants to take their JavaScript to the next level</strong>?
+      <strong style="font-size:1.4em; font-weight: 100;">Who Else Wants to See me Breaking Production Online?</strong>
       <br>
-      <a href="https://zerotoherojs.com/">Don’t miss the
-        <strong>JavaScript: from
-          <em>zero</em> to
-          <em>hero</em> 🦄</strong> early bird discount 💰</a>.
-      <br> …👆 psst I am teaching that course, and the content is
-      <strong>awesome</strong>! 😉
+      <a href="https://zerotoherojs.com/">Don’t miss out the
+        <strong>ZeroToHero</strong> Live <strong>Twitch</strong> Streams</a>.
+      <br> …👆 It’s so much fun. Come, join me.
     </p>
-  </div -->
+  </div>
   <script>
     (function() {
       const div = document.getElementById('z2hjs');
@@ -414,26 +412,15 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           <img src="images/me.jpg" alt="Photo of Volkan Özçelik" title="Volkan Özçelik">
         </aside>
         <h1>Volkan Özçelik</h1>
-        <p class="slogan">performance engineer, speaker, writer</p>
+        <p class="slogan">developer, connector, streamer, speaker, writer</p>
       </header>
 
       <section>
         <ul class="quick-links">
-<!--          <li>-->
-<!--            <a href="https://bytesized.tv/">-->
-<!--              <strong>My Screencasts</strong>-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li>-->
-<!--            <a href="https://speakerdeck.com/volkan">-->
-<!--              <strong>My Talks</strong>-->
-<!--            </a>-->
-<!--          </li>-->
-
           <li>
-            <a href="https://twitter.com/linkibol">
+            <a href="https://twitch.tv/ZeroToHeroDev">
               <strong>Follow Me</strong><br>
-              <em>twitter</em></a>
+              <em>twitch</em></a>
           </li>
 
           <li>
@@ -444,11 +431,10 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
 
 
           <li>
-            <a href="https://github.com/v0lkan">
+            <a href="https://github.com/zerotohero-dev">
               <strong>Use the Source</strong><br>
               <em>GitHub</em></a>
           </li>
-
         </ul>
       </section>
 
@@ -475,9 +461,6 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           (
           <em>both in code and also in design</em>).</p>
 
-        <p>I am a
-          <strong>performance</strong> enthusiast.</p>
-
         <blockquote>
           <p>My passion is to create
             <strong>fast</strong>,
@@ -486,89 +469,27 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
             love and use.</p>
         </blockquote>
 
-<!--        <p>While doing all these, I love to write an amazingly well-organized-->
-<!--          <strong>JavaScript</strong> too.</p>-->
-
-        <h2>Always Curious</h2>
-
-        <p>It’s
-          <strong>curiosity</strong> that matters. Or, asking the right questions, forming
+        <p>It’s the
+          <strong>curiosity</strong> that matters. Or asking the right questions, forming
           <strong>ideas</strong>, refining those ideas based on
           <strong>measurements</strong> and
           <strong>evidence</strong>.</p>
 
         <blockquote>
-          <p>The solution is just a
+          <p>The solution is a
             <strong>side effect</strong> of
             <strong>curiosity</strong>.</p>
-        </blockquote>
-
-        <p>So far, I’ve created mobile and web front-ends; built desktop and mobile
-          apps; played with SQL/NoSQL/GraphQL data stores;
-          <strong>automated</strong>
-          the deployment of
-          <strong>microservices</strong>, played with
-          <strong>serverless</strong> applications, used
-          <strong>real-time</strong>
-          databases, streams,
-          <strong>websockets</strong>, protocol buffers,
-          <strong>lambda functions</strong> and
-          <strong>message queues</strong>, crafted solutions to improve
-          <strong>scalability</strong> and
-          <strong>performance</strong> of both front end, and also back-end systems…</p>
-
-        <blockquote>
-          <p>Some call this being a “
-            <em>full stack developer</em>”, or a “
-            <em>unicorn developer</em>”.
-            <br>
-            <strong>I love unicorns</strong>: Yet, don’t call myself as such.</p>
         </blockquote>
       </section>
 
       <section>
-        <h2>I Cast</h2>
+        <h2>I Stream</h2>
 
-        <p>Nowadays I’m more into
-          <a href="https://zerotoherojs.com">
-            <strong>creating tutorials and screencasts</strong>
-          </a>.</p>
+        <p>Nowadays, I’m
+          <a href="https://twitch.tv/ZeroToHeroDev"><strong>breaking production</strong>
+            on live streams for the entire world to see</a>.</p>
 
-        <p>Why not books, but videos instead?—Because, I feel like times have changed,
-          and we’ve started to prefer to consume audiovisual content to reading books.
-        </p>
-
-        <p>I find this trend towards preferring audiovisual content to books
-          <em>sad</em>. Yet, we can only embrace it, as it’s a side effect of our progressive
-          evolution. Maybe books will become more
-          <strong>visual</strong>, and more
-          <strong>interactive</strong>
-          in the near future; who knows.</p>
-
-<!--        <ul style="margin-left: 0px">-->
-<!--          <li>-->
-<!--            <p>Nowadays, the majority of my-->
-<!--              <em>“free”</em> time goes to-->
-<!--              <a href="https://zerotoherojs.com/" style="display:inline;">JavaScript: from-->
-<!--                <strong>zero</strong> to-->
-<!--                <strong>hero</strong>-->
-<!--              </a>.-->
-<!--            </p>-->
-<!--          </li>-->
-<!--          <li>-->
-<!--            <p>Other than that, I-->
-<!--              <a href="https://bytesized.tv" style="display:inline;">-->
-<!--                <strong>screencast</strong> on-->
-<!--                <strong>bytesized.tv</strong>-->
-<!--              </a>.</p>-->
-<!--          </li>-->
-<!--          <li>-->
-<!--            <p>And I also-->
-<!--              <a href="https://soundcloud.com/v0lkan/" style="display:inline;">-->
-<!--                <strong>podcast</strong> once or twice a month</a>.</p>-->
-<!--          </li>-->
-<!--        </ul>-->
-
+        <p>Come, join me. It’s so much fun 😁.</p>
       </section>
 
       <section>
@@ -582,8 +503,14 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           <li>Widgets, APIs,
             <strong>Microservices</strong>;</li>
           <li>And
-            <strong>Serverless Architectures</strong>!</li>
+            <strong>Serverless Architectures</strong>.</li>
         </ul>
+
+        <blockquote>
+          <p>Public speaking is the most <strong>awesome</strong> and the most
+            <strong>terrifying</strong> experience that you’ll live simultaneously.
+            Everyone must do it at least once in their life.</p>
+        </blockquote>
 
         <dl>
           <dt>Here are some of the talks I’ve given so far:</dt>
@@ -594,112 +521,52 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           </dd>
           <dd>
             <a href="https://speakerdeck.com/volkan/the-secrets-of-high-performance-mobile-javascript-applications">The Secrets of
-              <strong>High Performance</strong> Mobile
+              <strong>High-Performance</strong> Mobile
               Applications
             </a>
           </dd>
           <dd>
-            <a href="https://speakerdeck.com/volkan/the-modern-hackers-guide-to-the-universe">The Modern Hacker’s Guide to The Universe</a>
-          </dd>
-          <dd>
-            <a href="https://speakerdeck.com/volkan/mobile-application-performance-tips">Mobile Application
-              <strong>Performance</strong> Tips</a>
-          </dd>
-<!--          <dd>-->
-<!--            <a href="https://speakerdeck.com/volkan/efficient-javascript">Efficient-->
-<!--              <strong>JavaScript</strong>-->
-<!--            </a>-->
-<!--          </dd>-->
-          <dd>
-            <a href="https://speakerdeck.com/volkan/javascript-widget-development-best-practices">
-              Widget Development Best Practices</a>
+            <a href="https://speakerdeck.com/volkan/the-modern-hackers-guide-to-the-universe">The Modern <strong>Hacker</strong>’s Guide to The Universe</a>
           </dd>
         </dl>
-
-        <!-- <blockquote>
-        <p>
-          <strong>Psst…</strong> If you want me to talk in your tech event
-          <a href="mailto:me@volkan.io">just shoot me an email</a>.
-          <br> I’m highly motivated and I’d
-          <strong>love</strong> to be there if my time permits.
-        </p>
-      </blockquote> -->
-
-<!--        <blockquote>-->
-<!--          <p>Though, recently I started speaking less at conferences because, nowadays,-->
-<!--            I am focusing more on creating-->
-<!--            <a href="https://zerotoherojs.com">lessons</a>,-->
-<!--            <a href="https://bytesized.tv">screencasts</a>, and-->
-<!--            <a href="https://soundcloud.com/v0lkan">podcasts</a> about how to be a good-->
-<!--            <strong>JavaScript</strong>-->
-<!--            developer in particular and how to be a good developer in general.-->
-<!--          </p>-->
-<!--        </blockquote>-->
-
-
-<!--        <p>-->
-<!--          <strong>Why</strong>? Because although creating screencasts take a lot of time,-->
-<!--          when you compare it to prepping for a tech talk, they are a breeze:</p>-->
-
-<!--        <ul>-->
-<!--          <li>It takes just a fraction of the time and energy that I spend on a conference-->
-<!--            prep.-->
-<!--          </li>-->
-<!--          <li>I can do it on my own schedule, so it is less stressful.</li>-->
-<!--          <li>I can revise and edit things even after I deliver them.</li>-->
-<!--        </ul>-->
-
-<!--        <blockquote>-->
-<!--          <p>Though I miss the stage.-->
-<!--            <strong>Constantly</strong>.</p>-->
-<!--        </blockquote>-->
-
-<!--        <p>The adrenaline rush of being-->
-<!--          <strong>on</strong> the stage, connecting with the community, exchanging ideas-->
-<!--          with other speakers, and getting feedback from the audience:-->
-<!--          <strong>That’s priceless</strong>!</p>-->
-
-        <blockquote>
-          <p>Being a public speaker is the most
-            <strong>awesome</strong>
-            and the most
-            <strong>terrifying</strong> experience that you’ll live simultaneously.</p>
-          <p>Everyone must do it at least once in their life.</p>
-        </blockquote>
-
-        <p>
-          <strong>I love to talk</strong>! And the first instant I find the extra time to
-          add a tech talk prep to my agenda, I’ll rush back on the stage!
-          <p/>
-
-<!--          <blockqoute>-->
-<!--            <p>I may also become a developer advocate-->
-<!--              <em>(which also is something that I’m seriously thinking about)</em> then-->
-<!--              I can find much more time to be on the stage too, as it will be part-->
-<!--              of my job to be there—That actually fits really well with my character.-->
-<!--            </p>-->
-<!--          </blockqoute>-->
-
-          <p>We’ll see how it goes 😉.</p>
       </section>
 
       <section>
-        <h2>I {[Code]}</h2>
+        <h2>I Hack</h2>
 
-        <p>Oh, by the way, I am a relentless
-          <strong>side projector</strong>.</p>
+        <p>I like tinkering with systems, and I’m not afraid to break stuff.</p>
 
-        <p>Most of my side projects are
-          <strong>open source</strong>
-          <br> and I maintain them either
-          <a href="https://github.com/v0lkan">under my personal
-            <strong>GitHub</strong> account</a>,
-          <br> or
-          <a href="https://github.com/orgs/jsbites/">under the
-            <strong>Byte-Sized JavaScript</strong> organization’s
-            <strong>GitHub</strong> account</a>.</p>
+        <p><strong>Since 2003</strong>, I have been all over the stack, as far as stack goes.</p>
+
+        <blockquote>
+        <p>I find gaps in <strong>software architectures</strong>, business workflows,
+          and <strong>organizational structures</strong>—optimizing them to become
+          <a href="https://www.youtube.com/watch?v=gAjR4_CbPpQ">better, faster, stronger</a>.</p>
+        </blockquote>
+
+        <p>I’ve created <strong>mobile</strong> and <strong>web</strong> front-ends,
+        built desktop and mobile <strong>apps</strong>, played with <strong>SQL/NoSQL/GraphQL</strong>
+        data stores, and more.</p>
+
+        <p>I’ve automated the deployment of <strong>microservices</strong>, played with
+          <strong>serverless</strong> architectures, Kubernetes, and its friends,
+          such as <strong>istio</strong>.</p>
+
+        <p>I’ve  used <strong>real-time</strong> databases, streams,
+          <strong>WebSockets</strong>, protocol buffers, <strong>lambda functions</strong>,
+          and <strong>message queues</strong>.</p>
+
+        <p>I’ve crafted solutions to improve the
+          <strong>scalability</strong> and <strong>performance</strong> of
+          both front-end, and also back-end systems.</p>
+
+        <p>I’m pretty sure there’s much more to add to the list that I don’t
+        remember right now.</p>
+
+        <p style="border-top: 6px #FFCC33 solid;padding-top:1em;margin-top:2em;text-align:center">
+          That’s me in a nutshell: I’m a curious and pragmatist nerd
+          who likes to get 💩 done.</p>
       </section>
-
       <p>&nbsp;</p>
     </article>
     <footer>
