--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
     <p style="line-height:2.4em;text-align:center;width: 750px;margin: 0 auto;margin-bottom:10px;margin-top:10px;">
       <strong style="font-size:1.4em; font-weight: 100;">Who Else Wants to See me Breaking Production Online?</strong>
       <br>
-      <a href="https://zerotoherojs.com/">Don’t miss out the
+      <a href="https://zerotohero.dev/">Don’t miss out the
         <strong>ZeroToHero</strong> Live <strong>Twitch</strong> Streams</a>.
       <br> …👆 It’s so much fun. Come, join me.
     </p>
@@ -390,7 +390,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
 
       div.addEventListener('click', function(evt) {
         evt.preventDefault();
-        window.location.href = 'https://zerotoherojs.com/';
+        window.location.href = 'https://zerotohero.dev/';
       });
     }());
   </script>
@@ -409,15 +409,14 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
           <li>
             <a href="https://twitch.tv/ZeroToHeroDev">
               <strong>Follow Me</strong><br>
-              <em>twitch</em></a>
+              <em>Twitch</em></a>
           </li>
 
           <li>
-            <a href="https://linkedin.com/in/volkanozcelik">
-              <strong>Get In Touch</strong><br>
-              <em>LinkedIn</em></a>
+            <a href="https://linktr.ee/v0lkan">
+              <strong>Me, Elsewhere</strong><br>
+              <em>Link Tree</em></a>
           </li>
-
 
           <li>
             <a href="https://github.com/zerotohero-dev">
