--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
     <p style="line-height:2.4em;text-align:center;width: 750px;margin: 0 auto;margin-bottom:10px;margin-top:10px;">
       <strong style="font-size:1.4em; font-weight: 100;">Who Else Wants to See me Breaking Production Online?</strong>
       <br>
-      <a href="https://zerotohero.dev/">Don’t miss out the
+      <a href="https://twitch.tv/ZeroToHeroDev">Don’t miss out the
         <strong>ZeroToHero</strong> Live <strong>Twitch</strong> Streams</a>.
       <br> …👆 It’s so much fun. Come, join me.
     </p>
@@ -390,7 +390,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
 
       div.addEventListener('click', function(evt) {
         evt.preventDefault();
-        window.location.href = 'https://zerotohero.dev/';
+        window.location.href = 'https://twitch.tv/ZeroToHeroDev';
       });
     }());
   </script>
