--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
   </style>
 </head>
 <body>
-  <div class="to-zero-to-hero" id="z2hjs" style="width:750px;margin: 0 auto;margin-top:30px;margin-bottom:10px;">
+  <!--div class="to-zero-to-hero" id="z2hjs" style="width:750px;margin: 0 auto;margin-top:30px;margin-bottom:10px;">
     <p style="line-height:2.4em;text-align:center;width: 750px;margin: 0 auto;margin-bottom:10px;margin-top:10px;">
       <strong style="font-size:1.4em; font-weight: 100;">Who Else Wants to See me Breaking Production Online?</strong>
       <br>
@@ -383,8 +383,8 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
         <strong>ZeroToHero</strong> Live <strong>Twitch</strong> Streams</a>.
       <br> …👆 It’s so much fun. Come, join me.
     </p>
-  </div>
-  <script>
+  </div-->
+  <!--script>
     (function() {
       const div = document.getElementById('z2hjs');
       div.addEventListener('mouseover', function(evt) {
@@ -399,7 +399,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
         window.location.href = 'https://twitch.tv/ZeroToHeroDev';
       });
     }());
-  </script>
+  </script-->
   <div class="flex-container">
     <article id="Main" class="flex-item-main">
       <header>
@@ -410,7 +410,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
         <p class="slogan">developer, connector, streamer, speaker, writer</p>
       </header>
 
-      <section>
+      <!-- section>
         <ul class="quick-links">
           <li>
             <a href="https://twitch.tv/ZeroToHeroDev">
@@ -430,7 +430,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
               <em>GitHub</em></a>
           </li>
         </ul>
-      </section>
+      </section -->
 
       <section>
         <h2>About Me</h2>
@@ -476,7 +476,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
         </blockquote>
       </section>
 
-      <section>
+      <!--section>
         <h2>I Stream</h2>
 
         <p>Nowadays, I’m
@@ -484,7 +484,7 @@ devops, full stack, performance nerd, scalability freak, JavaScript">
             on live streams for the entire world to see</a>.</p>
 
         <p>Come, join me. It’s so much fun 😁.</p>
-      </section>
+      </section-->
 
       <section>
         <h2>I Talk</h2>
