--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@ devops, full stack, performance nerd, scalability freak, JavaScript, Go, securit
               How to Install an <strong>AWS EKS</strong> Cluster</a>
             </li>
             <li class="leading-10 -ml-2">
+              <a href="https://www.zerotohero.dev/spire-rocks/" 
+                class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8 rounded-md"
+              ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
+                style="vertical-align: middle;display: inline; position:relative; top: -1px"
+                class="mr-2"
+              ><g transform="matrix(1,0,0,1,0,0)"><circle cx="12" cy="12" r="11.5" style="stroke-dasharray:7.505 2.814;stroke:#191919;stroke-linecap:round;stroke-linejoin:round;fill:none"></circle><circle cx="12" cy="12" r="7.5" style="fill:#78eb7b"></circle><path d="M6.7 17.3A7.5 7.5 0 0 1 17.3 6.7z" style="fill:#c9f7ca"></path><circle cx="12" cy="12" r="7.5" style="stroke:#191919;stroke-linecap:round;stroke-linejoin:round;fill:none"></circle><path d="M9.94 8.738A.274.274 0 0 0 9.5 9v6a.274.274 0 0 0 .44.262l5.589-3.024c.242-.131.242-.345 0-.476z" style="fill:#ffffff;stroke:#191919;stroke-linecap:round;stroke-linejoin:round"></path></g></svg>
+              Setting Up <strong>SPIRE</strong> on <strong>AWS EKS</strong></a>
+            
+            <li class="leading-10 -ml-2">
               <a href="https://www.zerotohero.dev/scaling-your-node-api-like-a-boss/" 
                 class="hover:no-underline hover:text-blue-700 hover:bg-yellow-100 rounded-md transition ease-out duration-300 block p-2 text-sm sm:text-lg leading-8"
               ><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24"
